--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
     <meta property="og:title" content="Arctic Studio - Official Website">
     <meta property="og:description" content="Arctic Studio is a small development studio that works on cool projects.">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
+    <meta property="og:image"
+        content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
     <meta property="og:type" content="business.business">
     <meta property="og:site_name" content="Arctic Studio - Official Website">
     <meta property="og:url" content="https://arcticstudio.info/index.html">
@@ -30,10 +31,12 @@
     <meta name="twitter:card" content="summary">
     <meta property="twitter:title" content="Arctic Studio - Official Website">
     <meta property="twitter:description" content="Arctic Studio is a development studio that works on cool projects.">
-    <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
+    <meta name="twitter:image"
+        content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
 
     <meta charset="UTF-8">
-    <meta name="keywords" content="arctic studio, arcticstudio, discord bots, discordbot, Arctic, Studio,Free games bot,arctic,studio, artic studio, arctics studio, articstudio,arctic development">
+    <meta name="keywords"
+        content="arctic studio, arcticstudio, discord bots, discordbot, Arctic, Studio,Free games bot,arctic,studio, artic studio, arctics studio, articstudio,arctic development">
     <meta name="author" content="Arctic Studio - Development Studio">
     <meta name="description" content="Arctic Studio is a small development studio that works on cool projects.">
 </head>
@@ -46,10 +49,10 @@
                     <h1 class="logoName">Arctic Studio</h1>
                 </a>
                 <div class="nav">
-                    <a rel="noreferrer" href="/contact">CONTACT</a>
-                    <a rel="noreferrer" href="/support">SUPPORT US</a>
-                    <a rel="noreferrer" href="/merch">MERCH</a>
-                    <a rel="noreferrer" href="/projects">OUR PROJECTS</a>
+                    <a class="NavOne" rel="noreferrer" href="/contact">CONTACT</a>
+                    <a class="NavTwo" rel="noreferrer" href="/support">SUPPORT US</a>
+                    <a class="NavThir" rel="noreferrer" href="/merch">MERCH</a>
+                    <a class="NavFour" rel="noreferrer" href="/projects">OUR PROJECTS</a>
                 </div>
             </div>
         </div>
@@ -62,9 +65,11 @@
                     <a rel="noreferrer" href="#about"><button class="MoreButton">MORE ABOUT US</button></a>
 
                     <div class="icons noSelect">
-                        <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert" src="../storage/Discord.jpg" alt="Discord" /></a>
+                        <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img
+                                class="invert discord" src="../storage/Discord.jpg" alt="Discord" /></a>
                         <!--<a rel="noreferrer" href="https://arctic-studio.tumblr.com/" target="_blank"><img src="../storage/Tumblr.png" alt="Tumblr" /></a>-->
-                        <a rel="noreferrer" href="https://www.reddit.com/r/ArcticStudio/" target="_blank"><img class="invert" src="../storage/reddit.png" alt="Reddit" /></a>
+                        <a rel="noreferrer" href="https://www.reddit.com/r/ArcticStudio/" target="_blank"><img
+                                class="invert reddit" src="../storage/reddit.png" alt="Reddit" /></a>
                     </div>
                 </div>
             </div>
@@ -77,22 +82,28 @@
                 <p class="AboutUsTitle">About Us</p>
                 <div class="AboutUsParagraph">
                     <p>Hey, Welcome to our official website!</p>
-                    <p>Arctic Studio is development studio that was created in 2018 by two friends. The name Arctic Studio was first used to publish games.</p>
+                    <p>Arctic Studio is development studio that was created in 2018 by two friends. The name Arctic
+                        Studio was first used to publish games.</p>
                     <p>We later also started working on other projects like Discord Bots and Websites.</p>
-                    <p>While making Discord Bots we have created an community with all amazing people and its growing every day!</p>
-                    <p>Check out our  <a rel="noreferrer" href="/projects">published projects</a>.</p>
-                    <p>Join our <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC">amazing community</a>.</p>
+                    <p>While making Discord Bots we have created an community with all amazing people and its growing
+                        every day!</p>
+                    <p>Check out our <a rel="noreferrer" href="/projects">published projects</a>.</p>
+                    <p>Join our <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC">amazing community</a>.
+                    </p>
                 </div>
             </div>
 
             <div class="footer">
                 <div class="footerIcons noSelect">
-                    <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert" src="./storage/Discord.jpg" alt="Discord" /></a>
-                    <a rel="noreferrer" href="https://www.reddit.com/r/ArcticStudio/" target="_blank"><img class="invert" src="../storage/reddit.png" alt="Reddit" /></a>
+                    <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert"
+                            src="./storage/Discord.jpg" alt="Discord" /></a>
+                    <a rel="noreferrer" href="https://www.reddit.com/r/ArcticStudio/" target="_blank"><img
+                            class="invert" src="../storage/reddit.png" alt="Reddit" /></a>
                 </div>
                 <p><b>Contact:</b></p>
                 <p><b>Email</b> : info.arcticstudio[at]gmail.com (response 1-4 days)</p>
-                <p><b>Discord</b> : <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC">join here</a> (response 1 day)</p>
+                <p><b>Discord</b> : <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC">join here</a>
+                    (response 1 day)</p>
                 <p>Background by <a rel="noreferrer" href="https://unsplash.com/@anniespratt">anniespratt</a></p>
                 <p>Website by <a rel="noreferrer" href="https://www.siddhart.dev">Siddhart</a></p>
                 <p>&copy; Arctic Studio 2020</p>
@@ -107,14 +118,28 @@
 <script src='https://code.jquery.com/jquery-3.5.1.min.js'></script>
 <script src="./scripts/counter.min.js"></script>
 <script src="./scripts/consoleArt.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
 <script async src='https://www.google-analytics.com/analytics.js'></script>
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
     ga('create', 'UA-136474655-2', 'auto');
     ga('send', 'pageview', 'arcticstudiohomepage');
+</script>
+
+<script>
+    //We are Arctic Studio
+    gsap.from("p.Title", { duration: 0.5, opacity: 0, y: 10 })
+    gsap.from("p.Under", { duration: 1, opacity: 0, y: 10, delay: 0.25 })
+
+    gsap.from("button.MoreButton", { duration: 0.75, opacity: 0, y: 10, delay: 0.75 })
+
+    gsap.from("img.discord",{ duration: 1, opacity: 0, x: -10, delay: 0.5 })
+    gsap.from("img.reddit",{ duration: 1, opacity: 0, x: 10, delay: 0.5 })
+
 </script>
