--- a/index.html
+++ b/index.html
@@ -134,12 +134,13 @@
 
 <script>
     //We are Arctic Studio
-    gsap.from("p.Title", { duration: 0.5, opacity: 0, y: 10 })
-    gsap.from("p.Under", { duration: 1, opacity: 0, y: 10, delay: 0.25 })
+    document.addEventListener('DOMContentLoaded', () => {
+        gsap.from("p.Title", { duration: 0.5, opacity: 0, y: 10 })
+        gsap.from("p.Under", { duration: 1, opacity: 0, y: 10, delay: 0.25 })
 
-    gsap.from("button.MoreButton", { duration: 0.75, opacity: 0, y: 10, delay: 0.75 })
+        gsap.from("button.MoreButton", { duration: 0.75, opacity: 0, y: 10, delay: 0.75 })
 
-    gsap.from("img.discord",{ duration: 1, opacity: 0, x: -10, delay: 0.5 })
-    gsap.from("img.reddit",{ duration: 1, opacity: 0, x: 10, delay: 0.5 })
-
+        gsap.from("img.discord", { duration: 1, opacity: 0, x: -10, delay: 0.5 })
+        gsap.from("img.reddit", { duration: 1, opacity: 0, x: 10, delay: 0.5 })
+    });
 </script>
