--- a/index.html
+++ b/index.html
@@ -119,17 +119,15 @@
 <script src="./scripts/counter.min.js"></script>
 <script src="./scripts/consoleArt.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
-<script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-136474655-2', 'auto');
-    ga('send', 'pageview', 'arcticstudiohomepage');
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RNL19R6SEM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RNL19R6SEM');
 </script>
 
 <script>
