undeifned image path
undeifned image path

--- a/ourprojects/rocketlaunchtracker.html
+++ b/ourprojects/rocketlaunchtracker.html
@@ -97,7 +97,7 @@
 
             <div class="footer">
                 <div class="footerIcons noSelect">
-                    <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert" src="./storage/Discord.jpg" alt="Discord" /></a>
+                    <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert" src="../storage/Discord.jpg" alt="Discord" /></a>
                     <a rel="noreferrer" href="https://www.reddit.com/r/ArcticStudio/" target="_blank"><img class="invert" src="../storage/reddit.png" alt="Reddit" /></a>
                 </div>
                 <p><b>Contact:</b></p>
