--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <script src="./scripts/counter.min.js"></script>
 <script src="./scripts/consoleArt.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-
+<script src="./scripts/hotjar.js"></script>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RNL19R6SEM"></script>
 <script>
