pages use hotjar now
pages use hotjar now

--- a/contact.html
+++ b/contact.html
@@ -108,6 +108,8 @@
     }
 </script>
 
+<script src="./scripts/hotjar.js"></script>
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RNL19R6SEM"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
