--- a/merch.html
+++ b/merch.html
@@ -65,6 +65,8 @@
 </body>
 </html>
 
+<script src="./scripts/hotjar.js"></script>
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RNL19R6SEM"></script>
 <script>
