--- a/support.html
+++ b/support.html
@@ -130,6 +130,8 @@
   gtag('config', 'G-RNL19R6SEM');
 </script>
 
+<script src="./scripts/hotjar.js"></script>
+
 <script>
     var request = new XMLHttpRequest()
     request.open('GET', 'https://api.duckduckgo.com/?q=useragent&format=json', true)
