--- a/ourprojects/valorantwiki.html
+++ b/ourprojects/valorantwiki.html
@@ -128,6 +128,7 @@
 </body>
 </html>
 
+<script src="../scripts/hotjar.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RNL19R6SEM"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
