--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         content="arctic studio, arcticstudio, discord bots, discordbot, Arctic, Studio,Free games bot,arctic,studio, artic studio, arctics studio, articstudio,arctic development">
     <meta name="author" content="Arctic Studio - Development Studio">
     <meta name="description" content="Arctic Studio is a small development studio that works on cool projects.">
+
+    <script data-ad-client="ca-pub-3431329833753927" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
