--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <a class="NavOne" rel="noreferrer" href="/contact">CONTACT</a>
                     <a class="NavTwo" rel="noreferrer" href="/support">SUPPORT US</a>
                     <a class="NavThir" rel="noreferrer" href="/merch">MERCH</a>
-                    <a class="NavFour" rel="noreferrer" href="/projects">OUR PROJECTS</a>
+                    <a class="NavFour" rel="noreferrer" href="/projects">PROJECTS</a>
                 </div>
             </div>
         </div>
@@ -83,16 +83,18 @@
             <div class="about">
                 <p class="AboutUsTitle">About Us</p>
                 <div class="AboutUsParagraph">
-                    <p>Hey, Welcome to our official website!</p>
-                    <p>Arctic Studio is development studio that was created in 2018 by two friends. The name Arctic
-                        Studio was first used to publish games.</p>
-                    <p>We later also started working on other projects like Discord Bots and Websites.</p>
-                    <p>While making Discord Bots we have created an community with all amazing people and its growing
-                        every day!</p>
-                    <p>Check out our <a rel="noreferrer" href="/projects">published projects</a>.</p>
-                    <p>Join our <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC">amazing community</a>.
-                    </p>
+                    <p>Founded in 2018 in the Netherlands, Arctic Studio is a development studio creating custom bots, websites and games.</p>
+                    <p>We have a small team of fewer than 5 programmers and designers.</p>
+                    <p>Arctic Studio started of as a game development studio. It was used to publish games under that we made in game jams.</p>
+                    <p>We later also started working on other projects like bots, websites and some more games. You may know us from the Free Games Bot.</p>
+                    <p>While working on different projects the Free Games Bot started growing really fast and boosted our community.</p>
+                    <p>We now have a Discord community with 2000± awesome people in it. Click on the discord button on the bottom of the page if you want
+                    to be part of our community.</p>
+                    <br>
+                    <p>Interested in the projects we have worked on?</p>
+                    <p>Check it out on the <a href="/projects"><a>projects</a> page</p>
                 </div>
+                <iframe class="DiscordEmbed" src="https://discord.com/widget?id=664194615817142302&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
 
             <div class="footer">
