added invite embed
added invite embed

--- a/ourprojects/valorantwiki.html
+++ b/ourprojects/valorantwiki.html
@@ -109,6 +109,7 @@
 
                 </table>
                 <img class="ProjectPreviewImage" src="../storage/project_images/Valorant_Wiki.png" alt="Preview" />
+                <iframe class="DiscordEmbed" src="https://discord.com/widget?id=664194615817142302&amp;theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
 
             <div class="footer">
