--- a/ourprojects/hermes.html
+++ b/ourprojects/hermes.html
@@ -88,6 +88,7 @@
                     </tr>
                 </table>
                 <img class="ProjectPreviewImage" src="../storage/project_images/Hermes.png" alt="preview"/>
+                <iframe class="DiscordEmbed" src="https://discord.com/widget?id=664194615817142302&amp;theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
 
             <div class="footer">
