--- a/ourprojects/freegames.html
+++ b/ourprojects/freegames.html
@@ -97,6 +97,7 @@
                         <th>The bot will responds with the current free games</th>
                     </tr>
                 </table>
+                <p style="text-align: center;margin-top: 50px;">Need help? Join the <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC">support server</a></p>
                 <img class="ProjectPreviewImage" src="../storage/project_images/Free_Games_Bot_v2.png" alt="Preview"/>
                 <iframe class="DiscordEmbed" src="https://discord.com/widget?id=664194615817142302&amp;theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
