--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     <meta name="author" content="Arctic Studio - Development Studio">
     <meta name="description" content="Arctic Studio is a small development studio that works on cool projects.">
 
-    <script data-ad-client="ca-pub-3431329833753927" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script data-ad-client="ca-pub-3431329833753927" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
@@ -69,7 +70,6 @@
                     <div class="icons noSelect">
                         <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img
                                 class="invert discord" src="../storage/Discord.jpg" alt="Discord" /></a>
-                        <!--<a rel="noreferrer" href="https://arctic-studio.tumblr.com/" target="_blank"><img src="../storage/Tumblr.png" alt="Tumblr" /></a>-->
                         <a rel="noreferrer" href="https://www.reddit.com/r/ArcticStudio/" target="_blank"><img
                                 class="invert reddit" src="../storage/reddit.png" alt="Reddit" /></a>
                     </div>
@@ -77,24 +77,31 @@
             </div>
 
             <div class="users" id="about">
-                <p id="SETUP"><b>2000000</b>+ users use our services/bots</p>
+                <p id="SETUP"><b>2500000</b>+ users use our services/bots</p>
             </div>
 
             <div class="about">
                 <p class="AboutUsTitle">About Us</p>
                 <div class="AboutUsParagraph">
-                    <p>Founded in 2018 in the Netherlands, Arctic Studio is a development studio creating custom bots, websites and games.</p>
+                    <p>Founded in 2018 in the Netherlands, Arctic Studio is a development studio creating custom bots,
+                        websites and games.</p>
                     <p>We have a small team of fewer than 5 programmers and designers.</p>
-                    <p>Arctic Studio started of as a game development studio. It was used to publish games under that we made in game jams.</p>
-                    <p>We later also started working on other projects like bots, websites and some more games. You may know us from the Free Games Bot.</p>
-                    <p>While working on different projects the Free Games Bot started growing really fast and boosted our community.</p>
-                    <p>We now have a Discord community with 2000± awesome people in it. Click on the discord button on the bottom of the page if you want
-                    to be part of our community.</p>
+                    <p>Arctic Studio started of as a game development studio. It was used to publish games under that we
+                        made in game jams.</p>
+                    <p>We later also started working on other projects like bots, websites and some more games. You may
+                        know us from the Free Games Bot.</p>
+                    <p>While working on different projects the Free Games Bot started growing really fast and boosted
+                        our community.</p>
+                    <p>We now have a Discord community with 2000± awesome people in it. Click on the discord button on
+                        the bottom of the page if you want
+                        to be part of our community.</p>
                     <br>
                     <p>Interested in the projects we have worked on?</p>
                     <p>Check it out on the <a href="/projects"><a>projects</a> page</p>
                 </div>
-                <iframe class="DiscordEmbed" src="https://discord.com/widget?id=664194615817142302&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                <iframe class="DiscordEmbed" src="https://discord.com/widget?id=664194615817142302&theme=dark"
+                    width="350" height="500" allowtransparency="true" frameborder="0"
+                    sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
 
             <div class="footer">
@@ -124,24 +131,19 @@
 <script src="./scripts/consoleArt.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
 <script src="./scripts/hotjar.js"></script>
-
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RNL19R6SEM"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-RNL19R6SEM');
+    gtag('config', 'G-RNL19R6SEM');
 </script>
-
 <script>
-    //We are Arctic Studio
     document.addEventListener('DOMContentLoaded', () => {
         gsap.from("p.Title", { duration: 0.5, opacity: 0, y: 10 })
         gsap.from("p.Under", { duration: 1, opacity: 0, y: 10, delay: 0.25 })
-
         gsap.from("button.MoreButton", { duration: 0.75, opacity: 0, y: 10, delay: 0.50 })
-
         gsap.from("img.discord", { duration: 1, opacity: 0, x: -10, delay: 0.75 })
         gsap.from("img.reddit", { duration: 1, opacity: 0, x: 10, delay: 0.75 })
     });
