--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="nav">
                     <a class="NavOne" rel="noreferrer" href="/contact">CONTACT</a>
                     <a class="NavTwo" rel="noreferrer" href="/support">SUPPORT US</a>
-                    <a class="NavThir" rel="noreferrer" href="/merch">MERCH</a>
+                    <!--<a class="NavThir" rel="noreferrer" href="/merch">MERCH</a>-->
                     <a class="NavFour" rel="noreferrer" href="/projects">OUR PROJECTS</a>
                 </div>
             </div>
