removed all nav items

--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
                 <div class="nav">
                     <a rel="noreferrer"  href="/contact">CONTACT</a>
                     <a rel="noreferrer"  href="/support">SUPPORT US</a>
-                    <a rel="noreferrer"  href="/merch">MERCH</a>
+                    <!-- <a rel="noreferrer"  href="/merch">MERCH</a> -->
                     <a rel="noreferrer"  href="/projects">OUR PROJECTS</a>
                 </div>
             </div>
