--- a/support.html
+++ b/support.html
@@ -52,7 +52,7 @@
                 <div class="nav">
                     <a href="/contact">CONTACT</a>
                     <a href="/support">SUPPORT US</a>
-                    <a href="/merch">MERCH</a>
+                    <!-- <a href="/merch">MERCH</a> -->
                     <a href="/projects">OUR PROJECTS</a>
                 </div>
             </div>
