--- a/games.html
+++ b/games.html
@@ -42,6 +42,9 @@
 </html>
 
 <script>
+    var is_mobile = !!navigator.userAgent.match(/iphone|android|blackberry/ig) || false;
+
+    if(is_mobile) return window.location.replace('/')
     window.location.replace("https://www.youtube.com/watch?v=dQw4w9WgXcQ");
 </script>
 
