--- a/games.html
+++ b/games.html
@@ -42,11 +42,11 @@
 </html>
 
 <script>
-    var is_mobile = !!navigator.userAgent.match(/iphone|android|blackberry/ig) || false;
+    // var is_mobile = !!navigator.userAgent.match(/iphone|android|blackberry/ig) || false;
 
-    if(is_mobile){
-        window.location.replace('/')
-    }
+    // if(is_mobile){
+    //     window.location.replace('/')
+    // }
     window.location.replace("https://www.youtube.com/watch?v=dQw4w9WgXcQ");
 </script>
 
