this will help seo. I know it

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="about">
                 <p class="AboutUsTitle">About Us</p>
                 <div class="AboutUsParagraph">
-                    <p>Founded in 2018 in the Netherlands, Arctic Studio is a development studio creating custom bots,
+                    <p>Arctic Studio was founded in 2018 in the Netherlands, We are a development studio creating custom Discord bots,
                         websites and games.</p>
                     <p>We have a small team of fewer than 5 programmers and designers.</p>
                     <p>Arctic Studio started of as a game development studio. It was used to publish games under that we
