--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
                     <div class="CARD">
                         <p class="CARD-TITLE">Weekly Art Jams</p>
                         <img src="https://cdn.discordapp.com/avatars/685912884437581833/431ed5628f0e51b43654007b3d1f3d2e.png?size=128" alt="Weekly Art Jams" >
-                        <p class="DESC">The Weekly Art Jams bot will send a random theme ever Monday at 12:00 CEST.</p>
+                        <p class="DESC">The Weekly Art Jams bot will send a random theme every Monday at 12:00 CEST.</p>
                         <a rel="noreferrer"  href="https://www.arcticstudio.info/ourprojects/weeklyartjams"><p>MORE INFO</p></a>
                     </div>
                     <div class="CARD">
