--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         to be part of our community.</p>
                     <br>
                     <p>Interested in the projects we have worked on?</p>
-                    <p>Check it out on the <a href="/projects"><a>projects</a> page</p>
+                    <p>Check it out on the <a href="/projects">projects</a> page</p>
                 </div>
                 <iframe class="DiscordEmbed" src="https://discord.com/widget?id=664194615817142302&theme=dark"
                     width="350" height="500" allowtransparency="true" frameborder="0"
