--- a/ourprojects/freegames.html
+++ b/ourprojects/freegames.html
@@ -47,7 +47,6 @@
                 <div class="nav">
                     <a href="../contact.html">CONTACT</a>
                     <a href="../support.html">SUPPORT US</a>
-                    <a href="../merch.html">MERCH</a>
                     <a href="../projects.html">OUR PROJECTS</a>
                 </div>
             </div>
@@ -81,20 +80,20 @@
                         <th>FG stop</th>
                         <th>Stop the bot from sending notifications</th>
                     </tr>
-
-                    <tr class="TableObject">
-                        <th>FG toggle StoreName</th>
-                        <th>Toggle the stores you want notifications from</th>
-                    </tr>
-
-                    <tr class="TableObject">
-                        <th>FG role @role</th>
-                        <th>Assign a role that will be mentioned</th>
-                    </tr>
-
-                    <tr class="TableObject">
+                    
+                                        <tr class="TableObject">
                         <th>FG get</th>
                         <th>The bot will responds with the current free games</th>
+                    </tr>
+
+                    <tr class="TableObject">
+                        <th>FG config</th>
+                        <th>Toggle the stores and change the language of the bot</th>
+                    </tr>
+
+                    <tr class="TableObject">
+                        <th>FG role @role/off</th>
+                        <th>Assign a role for the bot to mention</th>
                     </tr>
                 </table>
                 <p style="text-align: center;margin-top: 50px;">Need help? Join the <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC">support server</a></p>
