--- a/ourprojects/rocketlaunchtracker.html
+++ b/ourprojects/rocketlaunchtracker.html
@@ -83,7 +83,7 @@
                     </tr>
 
                     <tr class="TableObject">
-                        <th>RT start</th>
+                        <th>RT setup</th>
                         <th>Setup the bot in a channel</th>
                     </tr>
 
