--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="hero">
                 <div class="heroObj">
                     <p class="Title">We are Arctic Studio</p>
-                    <p class="Under">We are a developement studio</p>
+                    <p class="Under">We are a development studio</p>
                     <a rel="noreferrer" href="#about"><button class="MoreButton">MORE ABOUT US</button></a>
 
                     <div class="icons noSelect">
