--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
                 <div class="GRID">
                     <div class="CARD">
                         <p class="CARD-TITLE">Items Planet</p>
-                        <img src="https://itemsplanet.com/Storage/logo.png" alt="itemsplanet" >
+                        <img src="https://www.itemsplanet.com/300x300-logo.png" alt="itemsplanet" >
                         <p class="DESC">Get random cool products that you can buy on Amazon.</p>
                         <a rel="noreferrer"  target="_blank" href="https://www.itemsplanet.com"><p>MORE INFO</p></a>
                     </div>
